[package]
name = "jlou"
version = "0.1.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Command-line tool for JSON-RPC 2.0 over JSON Lines over UDP"
homepage = "https://github.com/sile/jlou"
repository = "https://github.com/sile/jlou"
readme = "README.md"

[dependencies]
noargs = "0.4.2"
nojson = "0.3.8"
